--- a/src/app/entity-display-question/entity-display-question.component.scss
+++ b/src/app/entity-display-question/entity-display-question.component.scss
@@ -2,7 +2,8 @@ div.display{
     display: flex;
 }
 .field{
-    border: 1px solid #ccc
+    border: 1px solid #ccc;
+    padding: 0.2em;
 }
 .text{
     width: 15em;
