--- a/src/app/entity-edit-question/entity-edit-question.component.scss
+++ b/src/app/entity-edit-question/entity-edit-question.component.scss
@@ -1,13 +1,12 @@
 .field{
-    border: none
+    border: none;
+
 }
 
 
 div.details{
     display: flex;
-    border: 2px solid gold;
     padding: 0.5em;
-
 
     .text{
         padding-top: 0em;
@@ -34,6 +33,7 @@ div.details{
         flex-direction: column;
         font-size: 0.85em;
         margin-top: 0.5em;
+        margin-left: 1em;
         div{
             display: inline-block;
             margin-bottom: 0.5em;
@@ -57,9 +57,9 @@ div.details{
     }
     .midcolumn{
         font-size: 0.8em;
-        margin-left: 0.5em;
+        margin-left: 1.5em;
         padding-right: 2em; 
-        margin-top: 0.4em;
+        margin-top: 0.7em;
     }
 
     .difficulty{
