--- a/src/app/entities/entities.component.html
+++ b/src/app/entities/entities.component.html
@@ -46,20 +46,35 @@
 
           <div class="entity" [ngSwitch]="entityConfig.type">
 
-            <entity-literary-work-form *ngSwitchCase="ENTITY_TYPES.LITERARY_WORK" [formGroup]="addEntity"
-              [adding]="true" [authorsIdMap]="foreignKeysEntitiesMap.authors" [entityConfig]="entityConfig"
-              [foreignKeysReloaded$]="foreignKeysReloaded$" (addAuthor)="addForeignKey('authors',$event)"
-              (done)="addEntityDone(i,$event)">
+            <entity-literary-work-form *ngSwitchCase="ENTITY_TYPES.LITERARY_WORK" @edittrigger [formGroup]="addEntity"
+              [adding]="true" (done)="addEntityDone(i,$event)">
+
+              <entity-form-input-textarea [formGroup]="addEntity" field="title">
+              </entity-form-input-textarea>
+
+              <entity-form-input-autocomplete class="author" field="author" [formGroup]="addEntity"
+                [entityConfig]="entityConfig" [foreignKeysReloaded$]="foreignKeysReloaded$"
+                [foreignKeysEntitiesMap]="foreignKeysEntitiesMap" (addEntry)="addForeignKey($event)">
+              </entity-form-input-autocomplete>
+
+              <entity-form-buttons class="buttons" [formGroup]="addEntity" [adding]="true"
+                (done)="addEntityDone(i,$event)"></entity-form-buttons>
+
             </entity-literary-work-form>
 
             <entity-literary-quote-form *ngSwitchCase="ENTITY_TYPES.LITERARY_QUOTE" @edittrigger [formGroup]="addEntity"
               [adding]="true" (done)="addEntityDone(i,$event)">
-              <entity-form-input-autocomplete class="work" [formGroup]="addEntity" [entityConfig]="entityConfig"
-                [foreignKeysReloaded$]="foreignKeysReloaded$" [foreignKeysEntitiesMap]="foreignKeysEntitiesMap"
-                (addEntry)="addForeignKey($event)">
+
+              <entity-form-input-textarea [formGroup]="addEntity" field="text">
+              </entity-form-input-textarea>
+
+              <entity-form-input-autocomplete class="work" field="work" [formGroup]="addEntity"
+                [entityConfig]="entityConfig" [foreignKeysReloaded$]="foreignKeysReloaded$"
+                [foreignKeysEntitiesMap]="foreignKeysEntitiesMap" (addEntry)="addForeignKey($event)">
               </entity-form-input-autocomplete>
               <entity-form-buttons class="buttons" [formGroup]="addEntity" [adding]="true"
                 (done)="addEntityDone(i,$event)"></entity-form-buttons>
+
             </entity-literary-quote-form>
 
             <entity-question-form *ngSwitchCase="ENTITY_TYPES.QUESTION" [formGroup]="addEntity" [adding]="true"
@@ -170,21 +185,29 @@
               <ng-container [ngSwitch]="entityConfig.type">
 
                 <entity-literary-work-form *ngSwitchCase="ENTITY_TYPES.LITERARY_WORK" @edittrigger
-                  [formGroup]="editEntity[entity.id]" [adding]="false" [enabled]="entity[entityConfig.enablement]"
-                  [authorsIdMap]="foreignKeysEntitiesMap.authors" [work]="entity" [entityConfig]="entityConfig"
-                  [foreignKeysReloaded$]="foreignKeysReloaded$" [inProgress]="updating[entity.id]"
-                  (addAuthor)="addForeignKey('authors',$event)">
-                </entity-literary-work-form>
-
-
-                <entity-literary-quote-form *ngSwitchCase="ENTITY_TYPES.LITERARY_QUOTE" @edittrigger
-                  [formGroup]="editEntity[entity.id]" [adding]="false" (done)="closeEditForm(entity.id,$event)">
-                  <entity-form-input-autocomplete class="work" [formGroup]="editEntity[entity.id]" [entity]="entity"
-                    [entityConfig]="entityConfig" [foreignKeysReloaded$]="foreignKeysReloaded$"
+                  [formGroup]="editEntity[entity.id]">
+                  <entity-form-input-textarea [formGroup]="editEntity[entity.id]" field="title">
+                  </entity-form-input-textarea>
+                  <entity-form-input-autocomplete class="author" field="author" [formGroup]="editEntity[entity.id]"
+                    [entity]="entity" [entityConfig]="entityConfig" [foreignKeysReloaded$]="foreignKeysReloaded$"
                     [foreignKeysEntitiesMap]="foreignKeysEntitiesMap" (addEntry)="addForeignKey($event)">
                   </entity-form-input-autocomplete>
                   <entity-form-buttons class="buttons" [formGroup]="editEntity[entity.id]" [adding]="false"
                     (done)=" closeEditForm(entity.id,$event)"></entity-form-buttons>
+                </entity-literary-work-form>
+
+
+                <entity-literary-quote-form *ngSwitchCase="ENTITY_TYPES.LITERARY_QUOTE" @edittrigger
+                  [formGroup]="editEntity[entity.id]" [adding]="false">
+                  <entity-form-input-textarea [formGroup]="editEntity[entity.id]" field="text">
+                  </entity-form-input-textarea>
+                  <entity-form-input-autocomplete class="work" field="work" [formGroup]="editEntity[entity.id]"
+                    [entity]="entity" [entityConfig]="entityConfig" [foreignKeysReloaded$]="foreignKeysReloaded$"
+                    [foreignKeysEntitiesMap]="foreignKeysEntitiesMap" (addEntry)="addForeignKey($event)">
+                  </entity-form-input-autocomplete>
+                  <entity-form-buttons class="buttons" [formGroup]="editEntity[entity.id]" [adding]="false"
+                    (done)=" closeEditForm(entity.id,$event)"></entity-form-buttons>
+
                 </entity-literary-quote-form>
 
                 <entity-question-form *ngSwitchCase="ENTITY_TYPES.QUESTION" @edittrigger
