--- a/src/app/entity-types/literary-work/entity-literary-work-form/entity-literary-work-form.component.scss
+++ b/src/app/entity-types/literary-work/entity-literary-work-form/entity-literary-work-form.component.scss
@@ -1,33 +1,10 @@
-div.display{
+.display{
     display: flex;
+    align-items: flex-start;
 
     .title{
-        width: 15em;
-       
-
-        mat-form-field{
-
-            padding-top: 0em;
-            width: 100%;
-       
-            textarea{
-                font-style: italic;
-                font-size: 0.85em;
-                margin-top: 0em;
-          
-            }
-        }
+        width: 25em;
+        margin-right: 1.5em;
     }
-    .authors{
-        input{
-            padding: 0.3em;
-            border: 1px solid #ccc;
-        }
-        .authorNotFound{
-            font-size: 0.9em;
-            border: 1px gold;
-            width: 13em;
-        }
-    }
-   
+
 }
