--- a/src/app/entity-form-input-autocomplete/entity-form-input-autocomplete.component.html
+++ b/src/app/entity-form-input-autocomplete/entity-form-input-autocomplete.component.html
@@ -1,23 +1,10 @@
-<input type="text" matInput class="autocomplete" [value]="current" [matAutocomplete]="auto"
-  (input)="onChange($event.target.value)" (blur)="checkOptionAfterBlur($event.target.value)" [disabled]="addingEntry">
-
-<mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayWith()">
-  <mat-option *ngFor="let option of filteredOptions | async" [value]="option"
-    (onSelectionChange)="selectionChange(option)">
-    {{getOptionValue(option)}}
-  </mat-option>
-</mat-autocomplete>
-
-<div class="optionNotFound" *ngIf="optionNotFound">
-  <span>
-    "{{optionNotFound}}" is not currently in the database.
-    Would you like to add this entry?</span>
-  <div>
-    <button mat-raised-button (click)="addNewEntry(optionNotFound)" [disabled]="addingEntry">add</button>
-    &nbsp;
-    <button mat-raised-button (click)="cancelAddNew()" [disabled]="addingEntry">cancel</button>
-  </div>
-  <div *ngIf="addingEntry">
-    <mat-spinner diameter="10"></mat-spinner>
-  </div>
-</div>
+<ng-container *ngIf="original">
+  <ng-container *ngFor="let entry of autocomplete; let i = index;">
+    <entity-form-input-autocomplete-index [autocomplete]="entry"></entity-form-input-autocomplete-index>
+  </ng-container>
+</ng-container>
+<ng-container *ngIf="multiple">
+  <button mat-icon-button (click)="addAutocomplete()">
+    <mat-icon>add</mat-icon>
+  </button>
+</ng-container>
